      of course encouraged!)

  [ Dave Walker (Daviey) ]
  * debian/control:
    - Remove unnecessary and potentially problematic use of Pre-Depends.
    - Set the debug package to Priority extra.
    - Change *-perl Section's from libs to perl
    - add ${shlibs:Depends} for mythtv-common Depends field
  * debian/rules:
    - Use debconf-updatepo to update translations when required
  * debian/copyright:
    - updated to reflect that mythtv is GPL-2 only.
    - inserted better licence statement and Copyright reference.
  * debian/mythtv-*.templates
    - Simplified strings; removed verbosity and improved readability.
  * Prevent the maintainer scripts from failing in case any questions 
    can't be displayed.

 -- Dave Walker (Daviey) <DaveWalker@ubuntu.com>  Mon, 22 Mar 2010 22:47:56 +0000

mythtv (0.23.0~trunk23623-0ubuntu1) lucid; urgency=low

  [ Dave Walker ]
  * debian/control:  Added quilt as a build-depends, primarily
    for karmic builds.

  [ Mario Limonciello ]
  * New checkout (r23623).
    - Fixes audio issues w/ ac3 audio.
  * debian/patches/36_setgroups_too:
    - Set the right args for setgroups. (LP: #524822)
  * debian/rules:
    - Explicitly set all shell scripts executable.  Fixes problems on < lucid
      builds.
  * debian/control:
    - Correct the replaces statements. (LP: #527288)

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 27 Feb 2010 14:33:45 -0600

mythtv (0.23.0~trunk23567-0ubuntu4) lucid; urgency=low

  [ Mario Limonciello ]
  * debian/control:
    - Build-depends on libxrandr-dev for xrandr support.
    - Restore Build-depends on libfftw3-dev (not really a top secret option)
  * debian/source_mythtv.py:
    - Don't use bool, apport doesn't like them.
  * debian/patches/36_setgroups_too:
    - Run setgroups() before setgid/setuid (LP: #524822)

  [ Andres Mejia ]
  * Refresh all patches. Use '-p ab' format with no index or timestamps.
  * Add comment for each patch.
  * Update debian/control file for minor cosmetic changes.